# ingenuity-bot

./: .gitattributes  .gitignore  HANDOFF.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
design/: ingenuity-ui-v1.html
docs/: privacy.md  tos-compliance.md
scripts/: run-snapshot.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: ingest_probe.rs  tablet_probe.rs  value_probe.rs
src-tauri/src/: history.rs  ingest.rs  lib.rs  model.rs  valuation.rs
src-tauri/src/trade/: client.rs  error.rs  mod.rs  models.rs  rate_limit.rs
