[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"
regex = "1"
